# six

games/misc/: a2-c-nc.six  b2.six  buginsix.six  buginsix2.six  buginsix3.six  durva-hiba.six  hard-to-see.six  kogorman-slow.six  mega-six.six  onegame.six  twogame.six  x.six  xx.six  xxx.six  y.six
games/problems/: cbrown-174p.six  cbrown-179p.six  cbrown-181p.six  cbrown-183p.six
pic/: hi48-app-six.xcf
report-2003/: g1.eps  g2.eps  g3.eps  g4.eps  g5.eps  g6.eps  g7.eps  g8.eps  rpt.bbl  rpt.bib  rpt.blg  rpt.ps  rpt.tex
scripts/: ccc  ccco  cccp  update-deb
six/: AUTHORS  INSTALL  Makefile.in  README  TODO  VERSION  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  configure.in.in  six.lsm  six.spec  subdirs
six/admin/: Makefile  Makefile.in
six/autom4te.cache/: output.0  requests  traces.0
six/doc/: Makefile.am  Makefile.in
six/doc/six/: Makefile.am  Makefile.in  index.docbook
six/po/: Makefile.in  it.gmo  it.po  six.pot
six/six/: Makefile.am  Makefile.in  README  asyncplayer.cpp  asyncplayer.h  batch.h  carrier.h  circuit.h  connector.cpp  connector.h  group.cpp  group.h  hexgame.cpp  hexgamestate.cpp  khexwidget.cpp  khexwidget.h  ksix.cpp  ksix.h  main.cpp  misc.cpp  misc.h  six.desktop  sixplayer.cpp  sixplayer.h  sixui.rc  vnd.kde.six.desktop
six/tests/: Makefile.am  Makefile.in  README  auto-player.cpp  carriertest.cpp  circuittest.cpp  connectortest.cpp  grouptest.cpp  hexboardtest.cpp  hexgametest.cpp  pbem.txt  strengthtest.sh  testutil.cpp  testutil.h
six/tests/start-positions/: a2-f6-c7-d5.six  a2-f6-g6.six  a2.six  a3-f6-c7-c8.six  a3.six  a4.six  b1-f6-c7-d4.six  b1.six  b2-f6-c7-c9-i5-i3.six  b2.six  b4.six  c2.six  k1.six
six/tests/start-positions-big/: 13-a2.six  13-b4.six  13-m1.six  15-a2.six
